[gd_scene load_steps=4 format=2]

[ext_resource path="res://UI/SlickerTheme.tres" type="Theme" id=1]
[ext_resource path="res://Menus/ExtrasMenu.gd" type="Script" id=2]
[ext_resource path="res://UI/SlickerTitleDynamicFont.tres" type="DynamicFont" id=3]

[node name="ExtrasMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -44.5
margin_right = 44.5
margin_bottom = 48.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Title"]
margin_top = 1.0
margin_right = 89.0
margin_bottom = 47.0

[node name="Control" type="Control" parent="Title/VBoxContainer"]
margin_right = 89.0

[node name="TitleLabel" type="Label" parent="Title/VBoxContainer"]
margin_top = 2.0
margin_right = 89.0
margin_bottom = 46.0
custom_fonts/font = ExtResource( 3 )
text = "extras"

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 47.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 141.0
margin_top = 6.0
margin_right = 179.0
margin_bottom = 126.0
alignment = 1

[node name="StoreButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_left = 2.0
margin_right = 36.0
margin_bottom = 22.0
size_flags_horizontal = 4
text = "store"

[node name="TrunkButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 38.0
margin_bottom = 46.0
size_flags_horizontal = 4
text = "trunk"

[node name="TomeButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 38.0
margin_bottom = 70.0
text = "tome"

[node name="StatsButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_left = 2.0
margin_top = 72.0
margin_right = 35.0
margin_bottom = 94.0
size_flags_horizontal = 4
text = "stats"

[node name="BackButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_left = 2.0
margin_top = 96.0
margin_right = 36.0
margin_bottom = 118.0
size_flags_horizontal = 4
text = "back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="CenterContainer/VBoxContainer"]
margin_top = 120.0
margin_right = 38.0
margin_bottom = 120.0
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/StoreButton" to="." method="_on_StoreButton_mouse_entered"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/StoreButton" to="." method="_on_StoreButton_pressed"]
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/TrunkButton" to="." method="_on_TrunkButton_mouse_entered"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/TrunkButton" to="." method="_on_TrunkButton_pressed"]
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/TomeButton" to="." method="_on_TomeButton_mouse_entered"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/TomeButton" to="." method="_on_TomeButton_pressed"]
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/StatsButton" to="." method="_on_StatsButton_mouse_entered"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/StatsButton" to="." method="_on_StatsButton_pressed"]
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/BackButton" to="." method="_on_BackButton_mouse_entered"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
